syntax = "proto3";

package pb;

option go_package = "./iecstream";
option java_multiple_files = true;
option java_package = "com.github.iec.stream.grpc";
option java_outer_classname = "IecStreamProto";

message Req {
  string ping = 1;
}

message Res {
  string pong = 1;
}

message PushChunkAsduReq {
  MsgBody info = 1;
}

message PushChunkAsduRes {
}

// 消息体结构
message MsgBody {
  string host = 1;
  int32 port = 2;
  string asdu = 3;
  int32 type_id = 4;
  uint32 coa = 5;
  oneof body {
    SinglePointInfo single_point_info = 100;
    DoublePointInfo double_point_info = 101;
    MeasuredValueScaledInfo measured_value_scaled_info = 102;
    MeasuredValueNormalInfo measured_value_normal_info = 103;
    StepPositionInfo step_position_info = 104;
    BitString32Info bit_string32_info = 105;
    MeasuredValueFloatInfo measured_value_float_info = 106;
    BinaryCounterReadingInfo binary_counter_reading_info = 107;
    EventOfProtectionEquipmentInfo event_of_protection_equipment_info = 108;
    PackedStartEventsOfProtectionEquipmentInfo packed_start_events_info = 109;
    PackedOutputCircuitInfoInfo packed_output_circuit_info = 110;
    PackedSinglePointWithSCDInfo packed_single_point_with_scd_info = 111;
  }
  string time = 18;
  string metaData = 19;
}

message SinglePointInfo {
  uint32 ioa = 1;
  bool value = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
  string time = 10;
}

message DoublePointInfo {
  uint32 ioa = 1;
  uint32 value = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
  string time = 10;
}

message MeasuredValueScaledInfo {
  uint32 ioa = 1;
  int32 value = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
  string time = 10;
}

message MeasuredValueNormalInfo {
  uint32 ioa = 1;
  int32 value = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
  string time = 10;
}

message StepPositionInfo {
  uint32 ioa = 1;
  StepPosition value = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
  string time = 10;
}

message StepPosition {
  int32 val = 1;
  bool has_transient = 2;
}

message BitString32Info {
  uint32 ioa = 1;
  uint32 value = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
  string time = 10;
}

message MeasuredValueFloatInfo {
  uint32 ioa = 1;
  float value = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
  string time = 10;
}

message BinaryCounterReadingInfo {
  uint32 ioa = 1;
  BinaryCounterReading value = 2;
  string time = 3;
}

message BinaryCounterReading {
  int32 counter_reading = 1;
  uint32 seq_number = 2;
  bool has_carry = 3;
  bool is_adjusted = 4;
  bool is_invalid = 5;
}

message EventOfProtectionEquipmentInfo {
  uint32 ioa = 1;
  uint32 event = 2;
  uint32 qdp = 3;
  uint32 msec = 4;
  string time = 5;
}

message PackedStartEventsOfProtectionEquipmentInfo {
  uint32 ioa = 1;
  uint32 event = 2;
  uint32 qdp = 3;
  uint32 msec = 4;
  string time = 5;
}

message PackedOutputCircuitInfoInfo {
  uint32 ioa = 1;
  uint32 oci = 2;
  uint32 qdp = 3;
  uint32 msec = 4;
  string time = 5;
}

message PackedSinglePointWithSCDInfo {
  uint32 ioa = 1;
  uint32 scd = 2;
  uint32 qds = 3;
  string qds_desc = 4;
  bool ov = 5;
  bool bl = 6;
  bool sb = 7;
  bool nt = 8;
  bool iv = 9;
}

service IecStreamRpc {
  rpc ping (Req) returns (Res) {}
  rpc pushChunkAsdu (PushChunkAsduReq) returns (PushChunkAsduRes) {}
}
